Article image alignement fix

--- a/assets/less/oc.less
+++ b/assets/less/oc.less
@@ -286,7 +286,6 @@ input[type="submit"] {
 .scenario-article-summary {
   font-size: 25px;
   color: #444;
-  margin-bottom: 25px;
 }
 
 .scenario-article-publisher > a {
@@ -847,6 +846,9 @@ input[type="submit"] {
   .scenario-article-image {
     margin-left: 55px;
     margin-right: 55px;
+  }
+  .scenario-article-image > img {
+    margin-top: 25px;
   }
   .scenario-article-narrative {
     margin-left: 55px;
